--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "max-component": "0.0.1",
     "sum-component": "0.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/visionmedia/mocha-cloud-grid-view.git"
   }
 }
